--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Wikipedia Ficticia</title>
-<link rel="stylesheet" href="css/wiki.css">
+<link rel="stylesheet" href="wiki.css">
 </head>
 <body>
 <header>
@@ -15,7 +15,7 @@
 <nav>
 <h3>Navegación</h3>
 <ul>
-<li><a href="paginas/personaje-principal.html">Personaje principal</a></li>
+<li><a href="personaje-principal.html">Personaje principal</a></li>
 </ul>
 </nav>
 <article>
